// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid columns 1 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-9agl6c"
  >
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid columns 2 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1q3ij5q"
  >
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid columns 3 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1219lrp"
  >
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid columns 4 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-peuquw"
  >
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid columns 5 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1pfdrj6"
  >
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid fractions 1 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-9v3h0o"
  >
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid fractions 2 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1nyx94m"
  >
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid fractions 3 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-18uh25f"
  >
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid fractions 4 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1i6i4hn"
  >
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid fractions 5 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-105i47p"
  >
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid width 1 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1j1t7nk"
  >
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid width 2 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-mxlwtn"
  >
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid width 3 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-1mqeorb"
  >
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid width 4 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-t0c2wm"
  >
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid width 5 snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-81x8ej"
  >
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
    <div
      class="css-p4bl4j"
    >
      Box
    </div>
    <div
      class="css-wpnsu2"
    >
      Box
    </div>
  </div>
</DocumentFragment>
`;
